--- a/src/Clocks.scss
+++ b/src/Clocks.scss
@@ -1,15 +1,62 @@
+#clocks.dimmed {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
 #clocks {
   width: 95%;
   margin: 100px auto;
 }
 
 .clock {
-  display: inline-block;
-  width: 30%;
+  display: block;
+  float: left;
+  width: 300px;
+  height: 100px;
   margin: 5px;
-  padding: 10px 0;
+  padding: 0;
   background-color: lightgray;
   border: 1px solid gray;
   text-align: center;
   font-size: 50px;
+}
+
+#add-button {
+  cursor: pointer;
+}
+
+#add-modal {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 100%;
+  width: 100%;
+  padding: 10px 20px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+#add-modal form {
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  height: 20%;
+  width: 20%;
+  padding: 20px;
+  background-color: white;
+  border: 1px solid gray;
+}
+
+#add-modal label, #add-modal input {
+  display: block;
+  margin: 5px 0;
+}
+
+#add-modal button {
+  display: inline;
+  margin-right: 5px;
 }
